--- a/Style/desktop-design-style.css
+++ b/Style/desktop-design-style.css
@@ -1,10 +1,3 @@
-   /* background-color:  hsl(183, 100%, 15%); */
-   /* background-color:  hsl(186, 14%, 43%); */
-   /* background-color:  hsl(184, 14%, 56%); */
-   /* background-color:  hsl(185, 41%, 84%); */
-   /* background-color:  hsl(189, 41%, 97%); */
-   /* background-color:  hsl(0, 0%, 100%); */
-
 
 body{
     margin: 50px auto;
@@ -28,7 +21,7 @@ input{
 .contener{
     background-color: white;
     border-radius: 10px;
-    width: 900px;
+    /* width: 900px; */
     display: flex;
     flex-direction: row;
     padding: 40px;
@@ -43,8 +36,9 @@ input{
 }
 .title{
     text-align: start;
-    margin-bottom: 5px;
+    margin: 10px;
     color: hsl(186, 14%, 43%);
+    position: relative;
 }
 
 .cross input{
@@ -64,7 +58,7 @@ input{
     position: absolute;
     width: 15px;
     left: 5%;
-    top: 60%;
+    top: 65%;
 }
 
 .cross input:focus{
@@ -103,8 +97,8 @@ input{
 }
 
 .tip-box input:hover{
-   background-color:  hsl(172, 48%, 56%);
-   color:  hsl(183, 100%, 15%);
+    background-color:  hsl(185, 41%, 84%);
+    color:  hsl(183, 100%, 15%);
 }
 
 
@@ -120,7 +114,7 @@ input[type=number]::-webkit-inner-spin-button{
 
 
 .rghit-side{
-    width: 450px;
+    /* width: 450px; */
     background-color: hsl(183, 100%, 15%);
     border-radius: 20px;
     display: flex;
@@ -135,18 +129,21 @@ input[type=number]::-webkit-inner-spin-button{
     justify-content: space-between;
 }
 .section-4 .amount p , .section-5 .price p{
-    font-size: 40px;
+    font-size: 30px;
     color:  hsl(172, 67%, 45%);
 }
 
 .type p{
     margin: 0;
+    font-size: 15px;
 }
 .type{
     /* margin-top: 20px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-right: 30px;
+    width: 100px;
 }
 
 .rghit-side input{
@@ -168,107 +165,24 @@ input[type=number]::-webkit-inner-spin-button{
 }
 
 
-.section-4 .amount p , .section-5 .price p{
 
+
+.not_zero{
+    visibility: hidden;
+}
+
+.section-3{
+    margin-top: 10px;
+}
+.section-3 .title{
+    margin-bottom: 10px;
+    display: inline-block;
+}
+
+
+.toggle-btn.active{
+    background-color:  hsl(172, 48%, 56%);
 }
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* body{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: hsl(185, 41%, 84%);
-    font-weight: bold;
-}
-.logo{
-    margin-bottom: 20px;
-}
-.contener{
-    background-color: white;
-    border-radius: 10px;
-    width: 925px;
-    
-    display: flex;
-    flex-direction: row;
-    text-align: center;
-    padding: 40px;
-    gap: 50px;
-}
-.left-side{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-}
-.title-p{
-    text-align: start;
-    margin: 5px;
-}
-
-.num input{
-    width: 100%;
-    padding: 15px;
-    border: none;
-    border-radius: 5px;
-    background-color: hsla(172, 67%, 45%, 0.208);
-    text-align: end;
-    font-weight: bold;
-    font-size: 20px;
-}
-.num{
-    position: relative;
-}
-.num img{
-    position: absolute;
-    width: 20px;
-    left: 5%;
-    top: 45%;
-}
-
-.num input:focus{
-    outline: none;
-    border: 3px solid hsl(172, 67%, 45%);
-}
-
-.tip{
-    margin: 20px 0px;
-    width: 100%;
-}
-
-.tip-box{
-    display: grid;
-    grid-template-columns: repeat(3, 30fr);
-    grid-template-rows: repeat(2, 50%);
-    gap: 10px;
-}
-.tip-box input{
-    padding: 10px;
-}
-
-
-.Number-People{
-    margin: 50px 0;
-}
-
-
-
-.rghit-side{
-    width: 50%;
-    background-color: hsl(183, 100%, 15%);
-} */
